# Agent-OSINT

./: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  db-migrate.yml  deploy-prod.yml
infra/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
osint/: __init__.py  capped_tool.py  cli.py  errors.py  llm_cost.py  log.py  prompts.py  run.py  scan.py  state.py  storage.py  types.py
osint/agents/: __init__.py  base.py
osint/api/: app.py  aws.py  dependencies.py
osint/db/: models.py  session.py
osint/tools/: __init__.py  apify.py  maigret.py  tavily.py
osint/worker/: config.py  event_sink.py  main.py  run_scan.py  tool_labels.py
references/: Simon Wen.md  our-vs-reference-diagnosis.md
scripts/: deploy_prod_aws.sh  diagnose_apify_mcp.py  smoke_test.sh  sweep_stuck_scans.py
tests/: test_capped_tool.py  test_cli.py  test_dependency_contracts.py  test_dispatcher.py  test_llm_cost.py  test_prompts.py  test_run.py  test_scan.py  test_scan_steps.py  test_state.py  test_storage.py  test_tools_apify.py  test_tools_factory.py  test_tools_maigret.py  test_tools_tavily.py  test_tools_web.py  test_types.py
tests/agents/: test_base.py
tests/deploy/: conftest.py  test_api_agents.py  test_api_scans.py  test_api_stream.py  test_event_sink_enrichment.py  test_jwt_round_trip.py  test_manifest_catalog.py  test_redis_event_sink.py  test_schema_parity.py  test_stuck_scan_sweeper.py  test_tool_labels.py  test_worker_loop.py
web-next/: Dockerfile  auth.config.ts  auth.ts  drizzle.config.ts  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
web-next/app/: globals.css  layout.tsx  page.tsx
web-next/components/: NewScanForm.tsx  ProgressStream.tsx  RecentTail.tsx  (+5 more)
(+69 files in other folders)
