[project]
name = "osint"
version = "0.1.0"
description = "Self-OSINT backend — v1 LangGraph agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "langgraph>=0.2.60,<2.0",
    "langchain-core>=0.3.20",
    "langchain-openai>=0.2.10",
    "openai>=1.90",
    "apify-client>=1.7",
    "maigret>=0.4.4",
    "structlog>=24.1",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "redis>=5.0,<6.0",
    "boto3>=1.34,<2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "moto[s3,sqs]>=5.0",  # in-process AWS mocks for unit tests
    "fakeredis[lua]>=2.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: spins up real services (docker) — slower",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["osint*"]
